# easyaiortc

./: README.md  easyaiortc.py  pyproject.toml
examples/: easyaiortc.ipynb  semantic_segmentation.ipynb
